display selected number to screen
Also fixes styling issue where some elements would pop into place. Re-named button classes for specificity.

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@
   background-color: rgb(17, 105, 35);
   padding: 10px;
   border-radius: 10px;
-  position: absolute;
 }
 
 .screen {
@@ -40,6 +39,18 @@
   text-align: right;
 }
 
+.history {
+  padding: 20px 15px;
+  font-size: 22px;
+  min-height: 15px;
+}
+
+.main-output {
+  padding: 10px 15px;
+  font-size: 28px;
+  min-height: 15px;
+}
+
 .buttons-grid {
   margin-top: 25px;
   display: grid;
@@ -47,18 +58,18 @@
   grid-gap: 10px; 
 }
 
-.clear, .delete {
+.btn-clear, .btn-delete {
   grid-column: span 2;
 }
 
-.btn {
+.btn-num, .btn-opp, .btn-clear, .btn-delete {
   border: 2px solid black;
   padding: 30px;
   border-radius: 10px;
   background-color: black;
 }
 
-.btn:hover {
+.btn-num:hover, .btn-opp:hover, .btn-clear:hover, .btn-delete:hover  {
   background-color: rgb(156, 152, 152);
   cursor: pointer;
 }
