Add addition button second screen push
Once addition button is pressed this will push the history of pressed keys to second screen above output screen.

--- a/styles.css
+++ b/styles.css
@@ -39,16 +39,17 @@
   text-align: right;
 }
 
-.history {
+.secondary-output {
   padding: 20px 15px;
   font-size: 22px;
-  min-height: 15px;
+  min-height: 25px;
 }
 
 .main-output {
   padding: 10px 15px;
   font-size: 28px;
   min-height: 15px;
+  padding-top: 5px;
 }
 
 .buttons-grid {
@@ -62,14 +63,14 @@
   grid-column: span 2;
 }
 
-.btn-num, .btn-opp, .btn-clear, .btn-delete {
+.buttons-grid > button {
   border: 2px solid black;
   padding: 30px;
   border-radius: 10px;
   background-color: black;
 }
 
-.btn-num:hover, .btn-opp:hover, .btn-clear:hover, .btn-delete:hover  {
+.buttons-grid > button:hover  {
   background-color: rgb(156, 152, 152);
   cursor: pointer;
 }
